tests/parse-errors/issue034-4.zir
fun f(a : int, b : int) {
  return a;
}

fun g() {
  return f(1,2,3);
}

let comp main = read[int] >>> return g() >>> write[int]
